--- a/python-template-master/requirements.txt
+++ b/python-template-master/requirements.txt
@@ -11,6 +11,7 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Markdown==2.6.11
+MarkupSafe==1.0
 mccabe==0.6.1
 nose==1.3.7
 numpy==1.15.0
@@ -25,4 +26,3 @@ urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
 Werkzeug==0.14.1
-shapely==1.7.1
